Добавлена индикация процесса выполнения команды в Блокноте

--- a/Notepad/templates/notepad.html
+++ b/Notepad/templates/notepad.html
@@ -25,6 +25,20 @@
                 <div class="form-group">
                     <button type="submit" class="btn btn-primary" onclick="actionType='open'">Открыть</button>
                     <button type="submit" class="btn btn-primary" onclick="actionType='save'">Сохранить</button>
+                    <button id="waiting" disabled class="btn btn-secondary" style="display: none"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-hourglass-split" viewBox="0 0 16 16">
+                        <path d="M2.5 15a.5.5 0 1 1 0-1h1v-1a4.5 4.5 0 0 1 2.557-4.06c.29-.139.443-.377.443-.59v-.7c0-.213-.154-.451-.443-.59A4.5 4.5 0 0 1 3.5 3V2h-1a.5.5 0 0 1 0-1h11a.5.5 0 0 1 0 1h-1v1a4.5 4.5 0 0 1-2.557 4.06c-.29.139-.443.377-.443.59v.7c0 .213.154.451.443.59A4.5 4.5 0 0 1 12.5 13v1h1a.5.5 0 0 1 0 1h-11zm2-13v1c0 .537.12 1.045.337 1.5h6.326c.216-.455.337-.963.337-1.5V2h-7zm3 6.35c0 .701-.478 1.236-1.011 1.492A3.5 3.5 0 0 0 4.5 13s.866-1.299 3-1.48V8.35zm1 0v3.17c2.134.181 3 1.48 3 1.48a3.5 3.5 0 0 0-1.989-3.158C8.978 9.586 8.5 9.052 8.5 8.351z"/>
+                      </svg></button>
+                      <button id="done" disabled class="btn btn-secondary" style="display: none">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check2" viewBox="0 0 16 16">
+                            <path d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0z"/>
+                          </svg>
+                      </button>
+                      <button id="error" disabled class="btn btn-secondary" style="display: none">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-circle" viewBox="0 0 16 16">
+                            <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+                            <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
+                          </svg>
+                      </button>
                 </div>
                 <div class="form-group">
                     <textarea name="textField" class="form-control" id="textField" rows="10"></textarea>
@@ -88,6 +102,9 @@
                     //console.log(theForm.path.value);
                     //console.log(theForm.textField.value);
                     //console.log(actionType);
+                    waiting.style.display="inline-block";
+                    done.style.display="none";
+                    error.style.display="none";
                     if(actionType==="open")
                     {
                         console.log(theForm.path.value);
@@ -98,6 +115,16 @@
                         console.log(JSON.stringify(co));
                         let h = await getHash(co);
                         console.log(h);
+                        sendServerPost(h,co);
+                    }
+                    else
+                    {
+                        let path=encodeURIComponent(theForm.path.value.replaceAll("\\", "/"));
+                        let bytes=bytesFromString(theForm.textField.value);
+                        let co=getWriteCommandObject({"path":path,"bytes":bytes},APP_ID);
+                        co=getSortedObject(co);
+                        console.log(JSON.stringify(co));
+                        let h = await getHash(co);
                         sendServerPost(h,co);
                     }
                     return false;
@@ -167,9 +194,24 @@
                     console.log("Получен ответ от клиента");
                     console.log(d);
                     let responseObject=JSON.parse(d);
-                    let fileBytes=responseObject.result.bytes;
-                    console.log(fileBytes);
-                    document.getElementById("textField").value=stringFromBytes(fileBytes);
+                    if(responseObject.result.success==="True")
+                    {
+                        done.style.display="inline-block";
+                        waiting.style.display="none";
+                        error.style.display="none";
+                    }
+                    else
+                    {
+                        error.style.display="inline-block";
+                        waiting.style.display="none";
+                        done.style.display="none";
+                    }
+                    if(c.type==="read")
+                    {
+                        let fileBytes=responseObject.result.bytes;
+                        console.log(fileBytes);
+                        document.getElementById("textField").value=stringFromBytes(fileBytes);
+                    }
                 }
                 function receiveSign(sign,commandObject)
                 {
