JS-функционал вынесен в отдельный файл

--- a/Notepad/templates/notepad.html
+++ b/Notepad/templates/notepad.html
@@ -6,7 +6,7 @@
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-<!--script src="https://geraintluff.github.io/sha256/sha256.min.js"></script-->
+<script src="appSRP.js"></script>
 		<title>Блокнот</title>
 	</head>
 	<body>
@@ -47,100 +47,46 @@
             <script>
                 let actionType=null;
                 let APP_ID="608f1351b59c6f34109189d9";
-                let CLIENT_ADDRESS="http://localhost:49053/";
-                function getReadCommandObject(args,APP_ID)
+                function onWaiting()
                 {
-                    return {"type":"read","args":{"path":args.path},"appID":APP_ID};
-                }
-                function getWriteCommandObject(args,APP_ID)
-                {
-                    return {"type":"write","args":{"path":args.path,"bytes":args.bytes},"appID":APP_ID};
-                }
-                function getSortedObject(uObj)
-                {
-                    uObj["args"]=Object.keys(uObj["args"]).sort().reduce(
-                    (obj, key) => { 
-                        obj[key] = uObj["args"][key]; 
-                        return obj;
-                    }, 
-                    {}
-                    );
-                    return Object.keys(uObj).sort().reduce(
-                    (obj, key) => { 
-                        obj[key] = uObj[key]; 
-                        return obj;
-                    }, 
-                    {}
-                    );
-                }
-                async function sha256(message) {
-                    // encode as UTF-8
-                    const msgBuffer = new TextEncoder().encode(message);                    
-
-                    // hash the message
-                    const hashBuffer = await crypto.subtle.digest('SHA-256', msgBuffer);
-
-                    // convert ArrayBuffer to Array
-                    const hashArray = Array.from(new Uint8Array(hashBuffer));
-
-                    // convert bytes to hex string                  
-                    const hashHex = hashArray.map(b => b.toString(16).padStart(2, '0')).join('');
-                    return hashHex;
-                }
-                async function getHash(commandObject)
-                {
-                    console.log("json");
-                    console.log(JSON.stringify(commandObject))
-                    console.log("sha256")
-                    let t=await sha256(JSON.stringify(commandObject));
-                    console.log(t)
-                    return t;
-                }
-                async function formSubmit(theForm)
-                {
-                    //console.log(theForm);
-                    //console.log(theForm.path.value);
-                    //console.log(theForm.textField.value);
-                    //console.log(actionType);
                     waiting.style.display="inline-block";
                     done.style.display="none";
                     error.style.display="none";
+                }
+                function onError()
+                {
+                    error.style.display="inline-block";
+                    done.style.display="none";
+                    waiting.style.display="none";
+                }
+                function onDone()
+                {
+                    done.style.display="inline-block";
+                    waiting.style.display="none";
+                    error.style.display="none";
+                }
+                function onReadReturn(responseObject,commandObject)
+                {
+                    let fileBytes=responseObject.result.bytes;
+                    console.log(fileBytes);
+                    document.getElementById("textField").value=stringFromBytes(fileBytes);
+                }
+                function onWriteReturn(responseObject,commandObject)
+                {
+
+                }
+                async function formSubmit(theForm)
+                {
                     if(actionType==="open")
                     {
-                        console.log(theForm.path.value);
-                        let path=encodeURIComponent(theForm.path.value.replaceAll("\\", "/"));
-                        let co=getReadCommandObject({"path":path},APP_ID);
-                        console.log(co);
-                        co=getSortedObject(co);
-                        console.log(JSON.stringify(co));
-                        let h = await getHash(co);
-                        console.log(h);
-                        sendServerPost(h,co);
+                        runSRPCommand(APP_ID,"read",{"path":theForm.path.value},"/command",onWaiting,onDone,onError,onReadReturn);
                     }
                     else
                     {
-                        let path=encodeURIComponent(theForm.path.value.replaceAll("\\", "/"));
-                        let bytes=bytesFromString(theForm.textField.value);
-                        let co=getWriteCommandObject({"path":path,"bytes":bytes},APP_ID);
-                        co=getSortedObject(co);
-                        console.log(JSON.stringify(co));
-                        let h = await getHash(co);
-                        sendServerPost(h,co);
+                        runSRPCommand(APP_ID,"write",{"path":theForm.path.value,"bytes":bytesFromString(theForm.textField.value)},"/command",onWaiting,onDone,onError,onWriteReturn);
                     }
                     return false;
                 }
-                /*let stroka="lol \xd0\xba\xd0\xb5\xd0\xba";
-                console.log(escape(stroka))
-                let txt=decodeURIComponent(escape(stroka));
-                console.log(txt);
-                console.log(unescape(encodeURIComponent(txt)));
-                var utf8 = unescape(encodeURIComponent("lol кек"));
-
-                var arr = [];
-                for (var i = 0; i < utf8.length; i++) {
-                    arr.push(utf8.charCodeAt(i));
-                }
-                decodeURI(escape(String.fromCharCode(108, 111, 108, 32, 208, 186, 208, 181, 208, 186)))*/
                 function stringFromBytes(bm)
                 {
                     return decodeURIComponent(escape(String.fromCharCode(...bm)))
@@ -154,79 +100,6 @@
                     }
                     return arr;
                 }
-                
-                function sendServerPost(hash,commandObject)
-                {
-                    var xhr = new XMLHttpRequest();
-                    var url = "/command";
-                    xhr.open("POST", url, true);
-                    xhr.setRequestHeader("Content-Type", "application/json");
-                    xhr.onreadystatechange = function () {
-                        if (xhr.readyState === 4 && xhr.status === 200) {
-                            receiveSign(xhr.responseText,commandObject);
-                        }
-                    };
-                    var data = JSON.stringify({"commandHash": hash});
-                    xhr.send(data);
-                }
-                
-                function sendClientPost(commandObject)
-                {
-                    console.log("Отправляем на Клиент:");
-                    console.log(commandObject);
-                    console.log(JSON.stringify(commandObject));
-                    var xhr = new XMLHttpRequest();
-                    var url = CLIENT_ADDRESS;
-                    xhr.open("POST", url, true);
-                    xhr.setRequestHeader("Content-Type", "application/json");
-                    xhr.onreadystatechange = function () {
-                        if (xhr.readyState === 4 && xhr.status === 200) {
-                            //receiveSign(xhr.responseText,command);
-                            //alert(xhr.responseText);
-                            receiveDataFromClient(xhr.responseText,commandObject)
-                        }
-                    };
-                    var data = JSON.stringify(commandObject);
-                    xhr.send(data);
-                }
-                function receiveDataFromClient(d,c)
-                {
-                    console.log("Получен ответ от клиента");
-                    console.log(d);
-                    let responseObject=JSON.parse(d);
-                    if(responseObject.result.success==="True")
-                    {
-                        done.style.display="inline-block";
-                        waiting.style.display="none";
-                        error.style.display="none";
-                    }
-                    else
-                    {
-                        error.style.display="inline-block";
-                        waiting.style.display="none";
-                        done.style.display="none";
-                    }
-                    if(c.type==="read")
-                    {
-                        let fileBytes=responseObject.result.bytes;
-                        console.log(fileBytes);
-                        document.getElementById("textField").value=stringFromBytes(fileBytes);
-                    }
-                }
-                function receiveSign(sign,commandObject)
-                {
-                    console.log("Получена подпись от сервера")
-                    console.log(sign)
-                    commandObject.serverSign=sign
-                    console.log(commandObject)
-                    sendClientPost(commandObject);
-                }
-                //let t = getReadCommandObject({"path":"C:\\Users\\maxno\\Documents\\VKR\\Client SRP\\meow.txt"},APP_ID)
-                //t=getSortedObject(t)
-                //let hash = getHash(t);
-                //console.log(t)
-                //console.log(hash)
-                //sendServerPost(hash,t);
             </script>
         </div>
 	</body>
