Работает приложение Проводник

--- a/Notepad/templates/notepad.html
+++ b/Notepad/templates/notepad.html
@@ -20,7 +20,7 @@
             <form id="bForm" onsubmit="formSubmit(this);return false">
                 <div class="form-group">
                     <label for="path">Путь файла</label>
-                    <input required minlength="1" name="path" type="text" class="form-control" id="path" aria-describedby="devNameText" value="C:\Users\maxno\Питон\VKR\Client SRP\meow.txt" placeholder="Введите путь файла">
+                    <input required minlength="1" name="path" type="text" class="form-control" id="path" placeholder="Введите путь файла">
                   </div>
                 <div class="form-group">
                     <button type="submit" class="btn btn-primary" onclick="actionType='open'">Открыть</button>
