--- a/Portal SRP/templates/formCreate.html
+++ b/Portal SRP/templates/formCreate.html
@@ -49,9 +49,9 @@
 	Разрешения, необходимые приложению:
   </div>
   <div class="form-group form-check">
-    <input name="spisok" type="checkbox" class="form-check-input" id="spisok">
-    <label class="form-check-label" for="spisok" aria-describedby="spisokText">Список файлов</label>
-	  <small id="spisokText" class="form-text text-muted">Получение списка файлов и папок в папке по её абсолютному пути</small>
+    <input name="list" type="checkbox" class="form-check-input" id="list">
+    <label class="form-check-label" for="list" aria-describedby="listText">Список файлов</label>
+	  <small id="listText" class="form-text text-muted">Получение списка файлов и папок в папке по её абсолютному пути</small>
   </div>
   <div class="form-group form-check">
     <input name="read" type="checkbox" class="form-check-input" id="read">
