--- a/Explorer/templates/explorer.html
+++ b/Explorer/templates/explorer.html
@@ -24,6 +24,7 @@
                   </div>
                 <div class="form-group">
                     <button type="submit" class="btn btn-primary" onclick="actionType='show'">Перейти</button>
+                    <button class="btn btn-success" onclick="newFolder()">Создать папку</button>
                     <button id="waiting" disabled class="btn btn-secondary" style="display: none"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-hourglass-split" viewBox="0 0 16 16">
                         <path d="M2.5 15a.5.5 0 1 1 0-1h1v-1a4.5 4.5 0 0 1 2.557-4.06c.29-.139.443-.377.443-.59v-.7c0-.213-.154-.451-.443-.59A4.5 4.5 0 0 1 3.5 3V2h-1a.5.5 0 0 1 0-1h11a.5.5 0 0 1 0 1h-1v1a4.5 4.5 0 0 1-2.557 4.06c-.29.139-.443.377-.443.59v.7c0 .213.154.451.443.59A4.5 4.5 0 0 1 12.5 13v1h1a.5.5 0 0 1 0 1h-11zm2-13v1c0 .537.12 1.045.337 1.5h6.326c.216-.455.337-.963.337-1.5V2h-7zm3 6.35c0 .701-.478 1.236-1.011 1.492A3.5 3.5 0 0 0 4.5 13s.866-1.299 3-1.48V8.35zm1 0v3.17c2.134.181 3 1.48 3 1.48a3.5 3.5 0 0 0-1.989-3.158C8.978 9.586 8.5 9.052 8.5 8.351z"/>
                       </svg></button>
@@ -66,6 +67,16 @@
                     waiting.style.display="none";
                     error.style.display="none";
                 }
+                function newFolder()
+                {
+                    let path=bForm.path.value.replaceAll("\\", "/");
+                    if(path[path.length-1]!=="/")
+                    {
+                        path+="/";
+                    }
+                    path=path+prompt("Введите наименование папки");
+                    runSRPCommand(APP_ID,"mkdir",{"path":path},"/command",onWaiting,onDone,onError,onDeleteReturn);
+                }
                 function onDeleteReturn(responseObject,commandObject)
                 {
                     bForm.onsubmit();
@@ -100,6 +111,20 @@
                     
                     for(let i in responseObject.result.folders)
                     {
+                        let ren=document.createElement("a");
+                        ren.innerHTML="&#9999;";
+                        ren.class="link-primary";
+                        ren.filePath=decodeURIComponent(responseObject.result.folders[i].path);
+                        ren.title="Удалить";
+                        ren.onclick=function(e)
+                        {
+                            if(confirm("Удалить папку "+decodeURIComponent(responseObject.result.folders[i].title)+"?"))
+                            {
+                                runSRPCommand(APP_ID,"delete",{"path":e.target.filePath},"/command",onWaiting,onDone,onError,onDeleteReturn);
+                            }
+                        }
+                        ren.href="#";
+
                         let udal=document.createElement("a");
                         udal.innerHTML="&#128465;";
                         udal.class="link-primary";
@@ -136,6 +161,7 @@
                         let t=document.createElement("li");
                         t.className="list-group-item"
                         t.appendChild(udal);
+                        t.appendChild(ren);
                         t.appendChild(put);
                         t.appendChild(s);
                         spisok.appendChild(t);
